--- a/.github/workflows/compilation.yaml
+++ b/.github/workflows/compilation.yaml
@@ -17,6 +17,15 @@ jobs:
     - name: Setup Conan
       uses: jwidauer/setup-conan@v1
 
+    - name: Cache Conan packages
+      id: cache-conan
+      uses: actions/cache@v3
+      with:
+        path: ~/.conan2
+        key: ${{ runner.os }}-conan2-${{ hashFiles('src/conanfile.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-conan2-
+
     - name: Create default Conan profile
       run: conan profile detect --force
 
