--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,9 +3,15 @@ cmake_minimum_required(VERSION 3.28)
 # Nome del progetto
 project(cripto_project)
 
-# Impostazione della versione dello standard C++
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release)
+endif()
+
+# Impostazioni cmake
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 
 # Includi la cartella headers per cercare i file di intestazione
 include_directories(lib-hash/headers)
