--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,13 +3,9 @@ cmake_minimum_required(VERSION 3.28)
 # Nome del progetto
 project(cripto_project)
 
-# Impostazioni cmake
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
-
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
-elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
+elseif(CMAKE_BUILD_TYPE STREQUAL "conan-release")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 endif()
 
@@ -24,29 +20,40 @@ find_package(GTest REQUIRED)
 add_subdirectory(lib-hash)
 add_subdirectory(lib-log)
 
-# Aggiungi l'eseguibile principale
-add_executable(${PROJECT_NAME} main.cc)
-add_executable(sha_cli sha_cli.cc)
-add_executable(ut_sha_functions ut_sha_functions.cc)
+# Definisci variabili per i nomi degli eseguibili
+set(MAIN_EXECUTABLE ${PROJECT_NAME})
+set(CLI_EXECUTABLE sha_cli)
+set(TEST_EXECUTABLE ut_sha_functions)
 
-# Linka le librerie
-target_link_libraries(${PROJECT_NAME} PRIVATE 
+# Usa le variabili per gli eseguibili
+add_executable(${MAIN_EXECUTABLE} main.cc)
+add_executable(${CLI_EXECUTABLE} sha_cli.cc)
+add_executable(${TEST_EXECUTABLE} ut_sha_functions.cc)
+
+# Aggiungi questa riga dopo la definizione degli eseguibili
+target_compile_features(${MAIN_EXECUTABLE} PRIVATE cxx_std_17)
+target_compile_features(${CLI_EXECUTABLE} PRIVATE cxx_std_17)
+target_compile_features(${TEST_EXECUTABLE} PRIVATE cxx_std_17)
+
+# Definisci una variabile per le dipendenze comuni
+set(COMMON_DEPENDENCIES
     hash-lib
     logging-lib
     openssl::openssl
+)
+
+# Usa la variabile nelle sezioni target_link_libraries
+target_link_libraries(${MAIN_EXECUTABLE} PRIVATE 
+    ${COMMON_DEPENDENCIES}
     boost::boost
 )
 
-target_link_libraries(sha_cli PRIVATE 
-    hash-lib
-    logging-lib
-    openssl::openssl
+target_link_libraries(${CLI_EXECUTABLE} PRIVATE 
+    ${COMMON_DEPENDENCIES}
 )
 
-target_link_libraries(ut_sha_functions PRIVATE 
-    hash-lib
-    logging-lib
-    openssl::openssl
+target_link_libraries(${TEST_EXECUTABLE} PRIVATE 
+    ${COMMON_DEPENDENCIES}
     gtest::gtest
 )
 
