--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,8 +7,8 @@ task:
 
   setup_script:
     # Installa git, Conan, e strumenti di compilazione C++
-    - sudo apt update
-    - sudo apt install -y git python3-pip g++ cmake build-essential
+    - apt update
+    - apt install -y git python3-pip g++ cmake build-essential
 
     # Installa Conan
     - pip3 install conan
