--- a/.github/workflows/compilation.yaml
+++ b/.github/workflows/compilation.yaml
@@ -40,3 +40,9 @@ jobs:
 
     - name: Build
       run: cmake --build src/build
+
+    - name: Pull pdflatex docker image
+      run: docker pull andreacicca/pdflatex:latest
+    
+    - name: Generate pdf
+      run: docker run -it --rm -v "${PWD}:/root/shared/folder" --name pdflatex pdflatex main.tex
